--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@
 title: Foundations for Open Scholarship Strategy Development
 description: ""
 url: "https://open-scholarship-strategy.github.io/site/"
-theme: jekyll-theme-dinky
+theme: jekyll-theme-leap-day
 
 
